--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,3 @@
-require: rubocop-thread_safety
-
 AllCops:
   Exclude:
     - 'db/**/*'
@@ -10,3 +8,5 @@ AllCops:
 
 Style/Documentation:
   Enabled: false
+
+require: rubocop-performance
