Fix tmux errors and vimrc settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,10 +65,7 @@ bind C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"
 bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # Allows scrolling and selecting in copy-mode
-set -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set-option -g mouse on
 
 # Better project name in status bar
 set -g status-left-length 18
@@ -81,8 +78,6 @@ bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
 # ——— Cosmetics ————————————————————————————————————————————————————
-set -g status-utf8 on
-
 set -g status-justify centre
 set -g status-bg black
 
