Add comment for setting base-index Commented out clear pane temporarily Removed `is_telescope` (a neovim plugin) checking Update pane/window options to new config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 setw -g mode-keys vi
 set -g default-terminal "screen-256color"
 
+# Set the base index for windows and panes to 1
 set -g base-index 1
 setw -g pane-base-index 1
 
@@ -23,7 +24,7 @@ bind l select-pane -R
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # clear pane
-bind C-l send-keys C-l
+# bind C-l send-keys C-l
 
 # Smart pane switching with awareness of vim splits
 # bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
@@ -37,22 +38,19 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
   | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 is_fzf="ps -o state= -o comm= -t '#{pane_tty}' \
   | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?fzf$'"
-is_telescope="ps -o state= -o comm= -t '#{pane_tty}' \
-  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?Telescope'"
 
-bind-key -n C-h if-shell "$is_vim || $is_fzf || $is_telescope" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim || $is_fzf || $is_telescope" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim || $is_fzf || $is_telescope" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim || $is_fzf || $is_telescope" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\\ if-shell "$is_vim || $is_fzf || $is_telescope" "send-keys C-\\\\" "select-pane -l"
-
+bind-key -n C-h if-shell "$is_vim || $is_fzf" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim || $is_fzf" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim || $is_fzf" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim || $is_fzf" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\\ if-shell "$is_vim || $is_fzf" "send-keys C-\\\\" "select-pane -l"
 
 set-option -g terminal-overrides 'xterm*:XT:Ms=\E]52;%p1%s;%p2%s\007:Cc=\E]12;%p1%s\007:Cr=\E]112\007:Cs=\E]50;CursorShape=%?%p1%{3}%<%t%{0}%e%p1%{2}%-%;%d\007'
 
 # Search for previous error
 bind-key e copy-mode \; send-keys "?Error" C-m
 
-set -sg escape-time 0
+set -sg escape-time 1
 
 # scrollback buffer size increase
 set -g history-limit 10000
@@ -84,21 +82,17 @@ set -g status-bg black
 set -g status-left "#[fg=green]#S #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-right "#[fg=cyan]%b %d #[fg=yellow]|#[fg=cyan]%l:%M %p"
 
-setw -g window-status-bell-attr default
-setw -g window-status-bell-fg red
-setw -g window-status-activity-attr bold
+set-option -g window-status-bell-style fg=red,default
+set-option -g window-status-activity-style bold
 
 setw -g window-status-format "#[fg=cyan]• #[fg=white]#I#[fg=cyan] #[fg=white]#12W"
 setw -g window-status-current-format "#[fg=red]▶ #[fg=white]#I#[fg=red,bold] #[fg=white]#W"
 
-set -g pane-border-fg colour238
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg black
+set-option -g pane-border-style fg=colour238,bg=black
+set-option -g pane-active-border-style fg=white,bg=black
 
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set-option -g message-style fg=white,bg=black,bright
+
 # ——— Cosmetics ————————————————————————————————————————————————————
 
 if-shell '[[ -e ~/.tmux.conf.local ]]' 'source-file ~/.tmux.conf.local'
