--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-setw -g mode-keys vi
 set -g default-terminal "screen-256color"
 
 # Set the base index for windows and panes to 1
@@ -15,6 +14,8 @@ bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 
+# Navigate panes like vim
+setw -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -22,17 +23,6 @@ bind l select-pane -R
 
 # reload tmux configuration
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
-
-# clear pane
-# bind C-l send-keys C-l
-
-# Smart pane switching with awareness of vim splits
-# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
-# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
-# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
-# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
-# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
-
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
   | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -52,22 +42,14 @@ bind-key e copy-mode \; send-keys "?Error" C-m
 
 set -sg escape-time 1
 
-# scrollback buffer size increase
+# Increase history scrollback to 10k lines
 set -g history-limit 10000
-
-# Use up and down arrows for temporary "maximize"
-unbind Up; bind Up resize-pane -Z; unbind Down; bind Down resize-pane -Z
-
-# Copy/paste interop
-bind C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"
-bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # Allows scrolling and selecting in copy-mode
 set-option -g mouse on
 
-# Better project name in status bar
-set -g status-left-length 18
-set -g status-left '#[fg=colour235,bg=colour76,bold] #S '
+bind C-c run "tmux show-buffer | pbcopy"
+bind C-v run "pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # Easily resize tmux panes
 bind -r H resize-pane -L 10
@@ -75,24 +57,6 @@ bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
-# ——— Cosmetics ————————————————————————————————————————————————————
-set -g status-justify centre
-set -g status-bg black
-
-set -g status-left "#[fg=green]#S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-right "#[fg=cyan]%b %d #[fg=yellow]|#[fg=cyan]%l:%M %p"
-
-set-option -g window-status-bell-style fg=red,default
-set-option -g window-status-activity-style bold
-
-setw -g window-status-format "#[fg=cyan]• #[fg=white]#I#[fg=cyan] #[fg=white]#12W"
-setw -g window-status-current-format "#[fg=red]▶ #[fg=white]#I#[fg=red,bold] #[fg=white]#W"
-
-set-option -g pane-border-style fg=colour238,bg=black
-set-option -g pane-active-border-style fg=white,bg=black
-
-set-option -g message-style fg=white,bg=black,bright
-
-# ——— Cosmetics ————————————————————————————————————————————————————
-
-if-shell '[[ -e ~/.tmux.conf.local ]]' 'source-file ~/.tmux.conf.local'
+# Cosmetics
+set -g status-left ''
+set -g status-right ''
