--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,3 +60,6 @@ bind -r L resize-pane -R 10
 # Cosmetics
 set -g status-left ''
 set -g status-right ''
+
+setw -g window-status-format "#[fg=cyan]• #[fg=white]#I#[fg=cyan] #[fg=white]#W"
+setw -g window-status-current-format "#[fg=red]▶ #[fg=white]#I#[fg=red,bold] #[fg=white]#W"
