Add VSCode keybindings / settings config Add tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ set -g default-terminal "screen-256color"
 set -g base-index 1
 setw -g pane-base-index 1
 
+set -g renumber-windows on
+
 unbind C-b
 set -g prefix C-a
 
@@ -57,9 +59,39 @@ bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
-# Cosmetics
-set -g status-left ''
-set -g status-right ''
+#  Status-bar
+#-----------------------------------------------
+set -g status on
+set -g status-position top
+set -g status-interval 0  # @see https://github.com/tmux/tmux/issues/108
 
-setw -g window-status-format "#[fg=cyan]• #[fg=white]#I#[fg=cyan] #[fg=white]#W"
-setw -g window-status-current-format "#[fg=red]▶ #[fg=white]#I#[fg=red,bold] #[fg=white]#W"
+set -g status-left ''
+set -g status-left-length 0
+
+set -g status-right ''
+set -g status-right-length 0
+
+set -g status-style 'fg=#575757,bg=#262626'
+
+#  Message
+#-----------------------------------------------
+set -g message-style 'fg=#575757,bg=#262626'
+
+#  Mode
+#-----------------------------------------------
+setw -g mode-style 'fg=#575757,bg=#262626'
+
+#  Window
+#-----------------------------------------------
+set -g window-status-format         ' #{b:pane_current_path} '
+set -g window-status-current-format ' #{b:pane_current_path} '
+set -g window-status-separator      '∙'
+
+setw -g window-status-style          'fg=#575757,bg=#262626'
+setw -g window-status-current-style  'fg=#c0c0c0,bg=#262626'
+setw -g window-status-activity-style 'fg=#7f7e7e'
+
+#  Pane
+#-----------------------------------------------
+set -g pane-border-style        'fg=#262626'
+set -g pane-active-border-style 'fg=#262626'
